fix weird z-index error, where #imie, #nazwisko, #klasa, #telefon would look fuzzy, blurry

--- a/src/components/Student/styles.scss
+++ b/src/components/Student/styles.scss
@@ -53,7 +53,7 @@
 			cursor: text;
 			position: relative;
 			min-width: 1rem;
-			z-index: 1;
+			// z-index: 1;
 			// padding: 0.2rem 0.5rem;
 			background-color: lighten($student-bg-color, 0.5%);
 			border-width: 1px;
